--- a/LV/main/Email.apk/res/values-lv/strings.xml
+++ b/LV/main/Email.apk/res/values-lv/strings.xml
@@ -17,7 +17,7 @@
     <string name="account_security_dialog_title">Drošības atjauninājums</string>
     <string name="account_security_policy_explanation_fmt">Serveris %s pieprasa, lai jūs tam atļautu attālināti vadīt dažas jūsu Android ierīces drošības funkcijas.</string>
     <string name="account_security_title">Ierīces drošība</string>
-    <string name="account_security_waiting_policy_key_message">%s needs security settings information from server，please wait...</string>
+    <string name="account_security_waiting_policy_key_message">%s nepieciešami drošības iestatījumu informācija no servera. Lūdzu uzgaidiet...</string>
     <string name="account_settings_action">Konta iestatījumi</string>
     <string name="account_settings_background_attachments_label">Lejupielādēt pielikumus</string>
     <string name="account_settings_background_attachments_summary">Automātiski lejupielādēt jaunāko ziņojumu pielikumus Wi-Fi tīklā</string>
@@ -58,16 +58,16 @@
     <string name="account_settings_vibrate_when_never">Nekad</string>
     <string name="account_settings_vibrate_when_silent">Tikai klusuma režīmā</string>
     <string name="account_settings_vibrate_when_summary">Izmantot vibrozvanu, kad tiek saņemts e-pasta ziņojums</string>
-    <string name="account_setup_account_type_exchange_action">Exchange</string>
+    <string name="account_setup_account_type_exchange_action">Apmaiņa</string>
     <string name="account_setup_account_type_exchange_action_alternate">Microsoft Exchange ActiveSync</string>
     <string name="account_setup_account_type_headline">Konta veids</string>
     <string name="account_setup_account_type_imap_action">IMAP</string>
     <string name="account_setup_account_type_instructions">Kāds ir šī konta veids?</string>
     <string name="account_setup_account_type_pop_action">POP3</string>
     <string name="account_setup_account_type_title">Konta iestatīšana</string>
-    <string name="account_setup_basic_description_label">Account name (optional)</string>
-    <string name="account_setup_basic_label">Please fill enter information for %s mailbox :</string>
-    <string name="account_setup_basic_name_label">Your name (optional)</string>
+    <string name="account_setup_basic_description_label">Konta nosaukums (Pēc izvēles)</string>
+    <string name="account_setup_basic_label">Lūdzu aizpildiet ieejas informāciju  %s pastkastītei :</string>
+    <string name="account_setup_basic_name_label">Jūsu vārds (pēc izvēles)</string>
     <string name="account_setup_basics_default_label">Pēc noklusējuma sūtīt e-pastu no šī konta.</string>
     <string name="account_setup_basics_email_label">E-pasta adrese</string>
     <string name="account_setup_basics_exchange_title">Exchange konta pievienošana</string>
@@ -130,7 +130,7 @@
     <string name="account_setup_incoming_security_tls_trust_certificates_label">STARTTLS (pieņemt visus sertifikātus)</string>
     <string name="account_setup_incoming_title">Konta iestatīšana</string>
     <string name="account_setup_incoming_username_label">Lietotājvārds</string>
-    <string name="account_setup_index_label">Please choose you need to add the email service providers:</string>
+    <string name="account_setup_index_label">Lūdzu, izvēlieties jums nepieciešamo, lai pievienotu e-pasta pakalpojumu sniedzēju:</string>
     <string name="account_setup_index_other_mails">Citi E-pasti</string>
     <string name="account_setup_index_title">Pasta iestatījumu ceļvedis</string>
     <string name="account_setup_names_account_name_label">Ievadiet konta nosaukumu (neobligāti)</string>
@@ -185,7 +185,7 @@
     <string name="add_cc_bcc_menu">Piev. kop./d. kop.</string>
     <string name="add_file_attachment">Pievienot failu</string>
     <string name="add_quick_responses_action">Rakstīt jaunu</string>
-    <string name="alert_selected_all_message">" has at least %d messages, do you sure select all？"</string>
+    <string name="alert_selected_all_message">" ir vismaz %d ziņojumu. Vai esat pārliecināts, ka izvēlaties visu？"</string>
     <string name="alert_title_selected">Iezīmēt visu</string>
     <string name="app_name">E-pasts</string>
     <string name="application_name">Tūlītēja augšupiel.</string>
@@ -213,7 +213,7 @@
     <string name="cc">Kopija</string>
     <string name="choose_attachment_dialog_title">Pielikuma izvēle</string>
     <string name="choosertitle_sharevia">Kopīgošana, izmantojot</string>
-    <string name="cleared_trusted_senders_message">"Clear \"show pictures\", pictures in messages won't be shown automatically."</string>
+    <string name="cleared_trusted_senders_message">"Notīrīt \"show pictures\", attēli ziņojumos netiks automātiski parādīti ."</string>
     <string name="close_action">Aizvērt</string>
     <string name="completed_no_file">Fails nav atrasts</string>
     <string name="compose_action">Rakstīt</string>
@@ -232,16 +232,16 @@
     <string name="copy_email">Kopēt e-pasta adresi</string>
     <string name="copy_number">Kopēt tālruņa numuru</string>
     <string name="create_action">Izveidot jaunu</string>
-    <string name="debug_clear_webview_cache">Clear WebView cache</string>
-    <string name="debug_disable_graphics_acceleration_label">Disable hardware graphics acceleration</string>
-    <string name="debug_enable_debug_logging_label">Enable extra debug logging?</string>
-    <string name="debug_enable_exchange_file_logging_label">Enable exchange sd card logging?</string>
-    <string name="debug_enable_exchange_logging_label">Enable exchange parser logging? (extremely verbose)</string>
-    <string name="debug_enable_strict_mode_label">Enable strict mode (with logging)</string>
-    <string name="debug_force_one_minute_refresh_label">Force 1-minute refresh for POP/IMAP</string>
+    <string name="debug_clear_webview_cache">Notīrīt WebView kešatmiņu</string>
+    <string name="debug_disable_graphics_acceleration_label">Atslēgt aparatūras grafikas paātrinājumu</string>
+    <string name="debug_enable_debug_logging_label">Ieslēgt papildus atkļūdošanas reģistrēšanu?</string>
+    <string name="debug_enable_exchange_file_logging_label">Ieslēgt sd kartes maiņas reģistrēšanu?</string>
+    <string name="debug_enable_exchange_logging_label">Ieslēgt maiņas parsētāja reģistrēšanu? (ļoti runīgs)</string>
+    <string name="debug_enable_strict_mode_label">Ieslēgt stingro režīmu (ar reģistrēšanu)</string>
+    <string name="debug_force_one_minute_refresh_label">Piespiedu 1-minūtea POP/IMAP atsvaidzināšana </string>
     <string name="debug_title">Atkļūdot</string>
     <string name="debug_version_fmt">Versija: %s</string>
-    <string name="default_signature">Sent from my MIPHONE</string>
+    <string name="default_signature">Nosūtīts no mana MIPHONE</string>
     <string name="delete_action">Dzēst</string>
     <string name="delete_quick_response_action">Dzēst</string>
     <string name="destination_format">%1$s, “%2$s”</string>
