--- a/LV/main/LiveWallpapers.apk/res/values-lv/strings.xml
+++ b/LV/main/LiveWallpapers.apk/res/values-lv/strings.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--Decoded by jBART (BurgerZ <az.burgerz@gmail.com)>--><resources>
-    <string name="wallpapers">Android Live Wallpapers</string>
-    <string name="wallpaper_walkaround">See Through</string>
+    <string name="wallpapers">Android mainīgās tapetes</string>
+    <string name="wallpaper_walkaround">Caurredzams</string>
     <string name="wallpaper_walkaround_author">Google</string>
-    <string name="wallpaper_walkaround_desc">See through your phone and walk around without risking accidents.</string>
-    <string name="wallpaper_grass">Grass</string>
+    <string name="wallpaper_walkaround_desc">Redziet caur tālruni un izvairieties no negadījumiem.</string>
+    <string name="wallpaper_grass">Zāle</string>
     <string name="wallpaper_grass_author">Google</string>
-    <string name="wallpaper_grass_desc">Blades of grass wave gently in front of a day or night sky.</string>
-    <string name="wallpaper_galaxy">Galaxy</string>
+    <string name="wallpaper_grass_desc">Zāļu stiebri lēnām viļņojas dienas vai nakts debesu priekšā.</string>
+    <string name="wallpaper_galaxy">Galaktika</string>
     <string name="wallpaper_galaxy_author">Google</string>
-    <string name="wallpaper_galaxy_desc">A galaxy made of slowly swirling stars.</string>
-    <string name="wallpaper_fall">Water</string>
+    <string name="wallpaper_galaxy_desc">Galaktika, ko veido lēni virpuļojošas zvaigznes.</string>
+    <string name="wallpaper_fall">Ūdens</string>
     <string name="wallpaper_fall_author">Google</string>
-    <string name="wallpaper_fall_desc">Autumn leaves tumble&lt;br> To the rippling pond below:&lt;br> Liquid background Zen</string>
-    <string name="wallpaper_clock">Polar clock</string>
+    <string name="wallpaper_fall_desc">Rudens lapas krīt&lt;br>nemierīgā dīķi:&lt;br>dzenbudisma tapete ar ūdens fonu</string>
+    <string name="wallpaper_clock">Polārais pulkstenis</string>
     <string name="wallpaper_clock_author">Google</string>
-    <string name="wallpaper_clock_desc">Presents the date and time as clockwise arcs: month, day, hour, minute, and second.</string>
+    <string name="wallpaper_clock_desc">Attēlo datumu un laiku (mēnesi, dienu, stundu, minūti un sekundi) lokos, kas novietoti pulksteņa rādītāja virzienā.</string>
     <string name="wallpaper_nexus">Nexus</string>
     <string name="wallpaper_nexus_author">Google</string>
-    <string name="wallpaper_nexus_desc">A peek inside the neural network.</string>
-    <string name="clock_settings">Polar clock settings</string>
-    <string name="show_seconds">Show seconds</string>
-    <string name="variable_line_width">Vary ring widths</string>
-    <string name="palette">Color palette</string>
-    <string name="palette_gray">Iron</string>
-    <string name="palette_violet">Midnight</string>
-    <string name="palette_matrix">Green Screen</string>
-    <string name="palette_white_c">Polar Bear (dynamic)</string>
-    <string name="palette_black_c">Black Hole (dynamic)</string>
-    <string name="palette_halloween">Pumpkin Pie</string>
-    <string name="palette_zenburn">Alien Fruit Salad</string>
-    <string name="palette_oceanic">Blue Laser</string>
+    <string name="wallpaper_nexus_desc">Ieskats nervu sistēmā.</string>
+    <string name="clock_settings">Polārā pulksteņa iestatījumi</string>
+    <string name="show_seconds">Rādīt sekundes</string>
+    <string name="variable_line_width">Mainīt gredzenu platumu</string>
+    <string name="palette">Krāsu palete</string>
+    <string name="palette_gray">Dzelzs</string>
+    <string name="palette_violet">Pusnakts</string>
+    <string name="palette_matrix">Zaļš ekrāns</string>
+    <string name="palette_white_c">Polārlācis (dinamisks)</string>
+    <string name="palette_black_c">Melnais caurums (dinamisks)</string>
+    <string name="palette_halloween">Ķirbju pīrāgs</string>
+    <string name="palette_zenburn">Neparastu augļu salāti</string>
+    <string name="palette_oceanic">Zils lāzers</string>
 </resources>
