--- a/LV/main/LiveWallpapersPicker.apk/res/values-lv/strings.xml
+++ b/LV/main/LiveWallpapersPicker.apk/res/values-lv/strings.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--Decoded by jBART (BurgerZ <az.burgerz@gmail.com)>--><resources>
-    <string name="application_name">Live Wallpaper Picker</string>
-    <string name="live_wallpaper_picker_title">Select live wallpaper</string>
-    <string name="live_wallpaper_picker_label">Live Wallpapers</string>
-    <string name="live_wallpaper_preview_title">Live wallpaper preview</string>
-    <string name="configure_wallpaper">Settings…</string>
-    <string name="wallpaper_instructions">Set wallpaper</string>
-    <string name="live_wallpaper_empty">No live wallpapers.</string>
-    <string name="set_live_wallpaper">Set wallpaper</string>
-    <string name="wallpaper_title_and_author">%1$s by %2$s</string>
-    <string name="live_wallpaper_loading">Loading live wallpaper…</string>
-    <string name="wallpaper_cancel">Cancel</string>
+    <string name="application_name">Mainīgo fona tapešu atlasītājs</string>
+    <string name="live_wallpaper_picker_title">Reāllaika tapetes atlasīšana</string>
+    <string name="live_wallpaper_picker_label">Mainīgas fona tapetes</string>
+    <string name="live_wallpaper_preview_title">Mainīgās tapetes priekšskatījums</string>
+    <string name="configure_wallpaper">Iestatījumi…</string>
+    <string name="wallpaper_instructions">Iestatīt tapeti</string>
+    <string name="live_wallpaper_empty">Nav mainīgo tapešu.</string>
+    <string name="set_live_wallpaper">Iestatīt tapeti</string>
+    <string name="wallpaper_title_and_author">%1$s, autors: %2$s</string>
+    <string name="live_wallpaper_loading">Notiek mainīgās tapetes ielāde...</string>
+    <string name="wallpaper_cancel">Atcelt</string>
 </resources>
