--- a/LV/main/SoundRecorder.apk/res/values-lv/strings.xml
+++ b/LV/main/SoundRecorder.apk/res/values-lv/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="alert_message_delete_record">Do you want to delete selected record?</string>
+    <string name="alert_message_delete_record">Vai vēlaties dzēst iezīmēto ierakstu?</string>
     <string name="app_name">Skaņas ierakstītājs</string>
     <string name="audio_db_album_name">Audio ieraksti</string>
     <string name="audio_db_artist_name">Jūsu ieraksti</string>
@@ -9,69 +9,69 @@
     <string name="button_ok">Labi</string>
     <string name="call_record">Ieraksta zvanu(%d)</string>
     <string name="call_record_or">vai</string>
-    <string name="default_record_name">Untitled recording</string>
+    <string name="default_record_name">Ieraksts bez nosaukuma</string>
     <string name="delete">Dzēst</string>
-    <string name="delete_dialog_message">Do you want to delete current recording?</string>
+    <string name="delete_dialog_message">Vai vēlaties dzēst šo ierakstu?</string>
     <string name="deleting_message">Dzēš...</string>
-    <string name="dialog_content_storage_full">Due to lack of storage space, recording was forced to stop. Remove unnecessary files through the File Explorer, would you like to open it now?</string>
+    <string name="dialog_content_storage_full">Sakarā ar vietas trūkumu krātuvē, ieraksts tika apturēts. Variet noņemt nevēlamos failus ar Failu pārlūku, vai vēlaties to tulīt atvērt?</string>
     <string name="dialog_play">Atskaņot</string>
     <string name="dialog_send">Sūtīt</string>
-    <string name="dialog_title_storage_full">Storage Full</string>
+    <string name="dialog_title_storage_full">Krātuve ir pilna</string>
     <string name="dialog_warning">Brīdiāšjums</string>
     <string name="error_app_internal">Iekšēja lietojumprogrammas kļūda</string>
-    <string name="error_app_internal_title">Sound recorder error</string>
+    <string name="error_app_internal_title">Skaņas ieraksta kļūda</string>
     <string name="error_mediadb_new_record">Nevarēja saglabāt ierakstīto audio.</string>
     <string name="error_sdcard_access">Nevar piekļūt USB atmiņai.</string>
-    <string name="fm_record">FM recording (%d)</string>
+    <string name="fm_record">FM ierakstīšana (%d)</string>
     <string name="hour">%d stunda(s)</string>
-    <string name="insert_sd_card">SD card is required</string>
-    <string name="low_battery_error">Battery has less than 5% left, to ensure that the recording is not lost, recording has been stopped and saved.</string>
-    <string name="low_battery_message_title">Low battery</string>
-    <string name="low_battery_warning">Unexpected shutdown may result in lost recording, it is recommended to record only when battery is fully charged.</string>
+    <string name="insert_sd_card">Pievienojiet USB atmiņu.</string>
+    <string name="low_battery_error">Akumulātora uzlāde ir palikusi mazāk kā 5% , lai pārliecinātos ka ieraksts netiks pazaudēts, ierakstīšana tika apstādināta un saglabāts.</string>
+    <string name="low_battery_message_title">Zema uzlāde</string>
+    <string name="low_battery_warning">Neparedzēta strāvas padeves izslēgšana var izraisīt ieraksa zaudējumu, ieteicams ierakstīt tikai ar pilnas uzlādes akumulātoru.</string>
     <string name="mark_now">(Current)</string>
     <string name="max_length_reached">Sasniegts maksimālais garums</string>
     <string name="menu_settings">Iestatījumi</string>
     <string name="menu_view_record_list">Skatīt ierakstus</string>
     <string name="minute">%d minūtes</string>
-    <string name="no_file">No recordings</string>
-    <string name="notification_playback">Playing back recording…</string>
-    <string name="notification_playback_paused">Playback paused...</string>
+    <string name="no_file">Nav ierakstu</string>
+    <string name="notification_playback">Atskaņo ierakstu…</string>
+    <string name="notification_playback_paused">Atskaņošana nopauzēta...</string>
     <string name="notification_recording">Ieraksta...</string>
-    <string name="notification_stopped">Recording has stopped</string>
-    <string name="notification_warning">Low storage (less than %d minutes)...</string>
-    <string name="open_file_explorer">Open File Explorer</string>
-    <string name="overwrite_dialog_message">%s already exists. Do you wish to overwrite it?</string>
+    <string name="notification_stopped">Ieraksts apstājies</string>
+    <string name="notification_warning">Maz vietas krātuvē (mazāk kā %d minūtes)...</string>
+    <string name="open_file_explorer">Atvērt Failu pārlūku</string>
+    <string name="overwrite_dialog_message">%s jau eksistē. Vai vēlaties to pārrakstīt?</string>
     <string name="prefDefault_recordType">audio/3gpp</string>
-    <string name="prefDialogTitle_recordType">Please select file type</string>
-    <string name="pref_summary_enable_high_quality">The audio file with high quality will be larger</string>
-    <string name="pref_summary_enable_sound_effect">Play sound effect when recording state is changed</string>
-    <string name="pref_title_enable_high_quality">Enable high quality</string>
-    <string name="pref_title_enable_sound_effect">Enable sound effect</string>
-    <string name="pref_title_record_type">Recording file type</string>
-    <string name="preference_led_indicator">Recording indicator when screen locked</string>
-    <string name="preference_led_indicator_prompt">Show LED and status bar indicators when recording and screen is locked</string>
-    <string name="preferences_title">Settings</string>
-    <string name="record_list">Recordings list</string>
-    <string name="record_loading">Loading recording, please wait.</string>
+    <string name="prefDialogTitle_recordType">Lūdzu, izvēlieties faila tipu</string>
+    <string name="pref_summary_enable_high_quality">Audio fails ar augstu kvalitāti, būs lielāks</string>
+    <string name="pref_summary_enable_sound_effect">Atskaņot skaņas efektu, kad ieraksta stāvoklis tiek mainīts</string>
+    <string name="pref_title_enable_high_quality">Iespējot augstu kvalitāti</string>
+    <string name="pref_title_enable_sound_effect">Iespējot skaņas efektu</string>
+    <string name="pref_title_record_type">Ieraksta faila tips</string>
+    <string name="preference_led_indicator">Ierakstīšanas indikators kad ekrāns ir bloķēts</string>
+    <string name="preference_led_indicator_prompt">Rādīt LED un statusa joslas indikatoru, kad ieraksta un ekrāns ir bloķēts</string>
+    <string name="preferences_title">Iestatījumi</string>
+    <string name="record_list">Ierakstu saraksts</string>
+    <string name="record_loading">Ielādē ierakstus, lūdzu, pagaidiet.</string>
     <string name="record_name_hour">.</string>
     <string name="record_name_minute">minūtes</string>
-    <string name="record_picker_title">Choose recording</string>
-    <string name="record_saving">Saving recording, please wait!</string>
+    <string name="record_picker_title">Izvēlieties ierakstu</string>
+    <string name="record_saving">Saglabā ierakstu, lūdzu, pagaidiet!</string>
     <string name="recording">Notiek ierakstīšana</string>
     <string name="recording_stopped">Ierakstīšana apturēta</string>
-    <string name="rename">Rename</string>
-    <string name="rename_dialog_title">Rename for this recording</string>
-    <string name="rename_duplicate">Duplicate recording name, please re-enter:</string>
-    <string name="rename_illegal">Illegal recording name, please re-enter:</string>
-    <string name="sd_card_not_available">SD card is not available</string>
+    <string name="rename">Pārsaukt</string>
+    <string name="rename_dialog_title">Ieraksta pārsaukšana</string>
+    <string name="rename_duplicate">Ieraksta nosaukuma dublikāts, lūdzu ievadiet vēlreiz:</string>
+    <string name="rename_illegal">Nelegāls ieraksta nosaukums, lūdzu ievadiet vēlreiz:</string>
+    <string name="sd_card_not_available">SD karte nav pieejama</string>
     <string name="second">%d sekundes</string>
     <string name="send_to">Sūtīt uz</string>
-    <string name="sound_recorder_settings">Recording Settings</string>
-    <string name="status_bar_anti_disturb">Phone has been muted, adjust volume to resume.</string>
-    <string name="status_bar_back">Click to return to Recorder</string>
-    <string name="status_bar_recording">Recording...</string>
-    <string name="status_bar_recording_back">Click to return to Recorder</string>
-    <string name="status_bar_recording_pause">"Recording has been paused. "</string>
+    <string name="sound_recorder_settings">Ierakstīšanas iestatījumi</string>
+    <string name="status_bar_anti_disturb">Tālrunis ir bez skaņās. Noregulējiet skaļumu, lai atsāktu.</string>
+    <string name="status_bar_back">Noklikšķiniet, lai atgrieztos ierakstīšanā</string>
+    <string name="status_bar_recording">Ieraksta...</string>
+    <string name="status_bar_recording_back">Noklikšķiniet, lai atgrieztos ierakstīšanā</string>
+    <string name="status_bar_recording_pause">"Ieraksts ir nopauzēts. "</string>
     <string name="storage_is_full">Krātuve ir pilna</string>
     <string name="timer_format" formatted="false">%02d:%02d</string>
     <string name="unknown_caller">Nezināms zvanītājs</string>
