--- a/LV/main/FileExplorer.apk/res/values-lv/strings.xml
+++ b/LV/main/FileExplorer.apk/res/values-lv/strings.xml
@@ -3,21 +3,21 @@
     <string name="account_bind_prompt">"Migrēju lietotāja datus, tādēļ tavs konts īslaicīgi nav pieejams. Gaidi..."</string>
     <string name="add_task">Pievienot uzdevumu</string>
     <string name="adding_upload_tasks">Augšupielādes uzdevumu pievienošana.</string>
-    <string name="app_cache_cleanup_indication">%s cache</string>
-    <string name="app_cache_title">App cache</string>
-    <string name="app_garbage_cleanup_indication">%s app junk</string>
-    <string name="app_garbage_path">Location:</string>
-    <string name="app_garbage_title">App junk</string>
+    <string name="app_cache_cleanup_indication">%s kešatmiņa</string>
+    <string name="app_cache_title">Lietotņu kešatmiņa</string>
+    <string name="app_garbage_cleanup_indication">%s nevēlamā lietotne</string>
+    <string name="app_garbage_path">Atrodas:</string>
+    <string name="app_garbage_title">Nevēlamās lietotnes</string>
     <string name="app_name">Failu Pārlūks</string>
     <string name="application_size_label">Lietotne</string>
     <string name="background">Lejupielādēt fonā</string>
-    <string name="bind_account">Pievienot MiDrive kontam</string>
-    <string name="bind_account_summary">Ja tev jau ir MiDrive konts, vari pievienot to, lai saņemtu savus personīgos datus</string>
-    <string name="binded_accout_description">Konti ir apvienoti. Vari lieot kā Xiaomi, tā MiDrive kontus, lai piekļūtu saviem datiem tajos</string>
-    <string name="binded_accout_title">MiDrive Konts</string>
-    <string name="cache_size_label">Cache</string>
+    <string name="bind_account">Pievienot MiDisks kontam</string>
+    <string name="bind_account_summary">Ja tev jau ir MiDisks konts, vari pievienot to, lai saņemtu savus personīgos datus</string>
+    <string name="binded_accout_description">Konti ir apvienoti. Vari lieot kā Xiaomi, tā MiDisks kontus, lai piekļūtu saviem datiem tajos</string>
+    <string name="binded_accout_title">MiDisks Konts</string>
+    <string name="cache_size_label">Kešatmiņa</string>
     <string name="cancel">Atcelt</string>
-    <string name="cancel_app_garbage_cleanup">Cancel app cleanup</string>
+    <string name="cancel_app_garbage_cleanup">Atcelt lietotņu tīrīšanu</string>
     <string name="category_all">Visi</string>
     <string name="category_apk">APKs</string>
     <string name="category_bluetooth">Bluetooth</string>
@@ -32,7 +32,7 @@
     <string name="category_zip">Arhīvi</string>
     <string name="choose_send_type">Izvēlēties sūtīšanas tipu</string>
     <string name="choose_upload_location">Izvēlēties augšupielādes vietni</string>
-    <string name="clean_app_garbage">Delete %d item(s)</string>
+    <string name="clean_app_garbage">Dzēst %d vienums(i)</string>
     <string name="clean_message">Dzēšu %1$s</string>
     <string name="clean_title">>Aizvākt mēslainē datnes, kas vecākas par 30 dienām</string>
     <string name="clean_trash_box">Iztukšot mēslaini</string>
@@ -45,7 +45,7 @@
     <string name="confirm_know">Labi</string>
     <string name="copy_failed">Kopēšana neizdevās</string>
     <string name="create_new_folder_desctiption">Veidoju jaunu mapi...</string>
-    <string name="create_new_folder_failed">Neizdev;as izveidot mapi %1$s</string>
+    <string name="create_new_folder_failed">Neizdevās izveidot mapi %1$s</string>
     <string name="create_share_link_description">Veidoju kopīgojuma saiti…</string>
     <string name="cution">Tips</string>
     <string name="data_capacity">Brīva vieta: %1$s</string>
@@ -68,12 +68,12 @@
     <string name="dialog_type_image">Attēls</string>
     <string name="dialog_type_text">Teksts</string>
     <string name="dialog_type_video">Video</string>
-    <string name="directory_no_item">Empty folder</string>
+    <string name="directory_no_item">Tukša mape</string>
     <string name="download_failed">Lejupielāde neizdevās!</string>
-    <string name="download_link_completed">Es kopīgoju %1$s via MiDrive. Uzklikšķini šai saitei, lai skatītu: </string>
+    <string name="download_link_completed">Es kopīgoju %1$s via MiDisks. Uzklikšķini šai saitei, lai skatītu: </string>
     <string name="downloading">Lejuplādēju...</string>
     <string name="empty_dir_cleanup_indication">%s junk files</string>
-    <string name="empty_dir_title">Empty folders</string>
+    <string name="empty_dir_title">Tukšas mapes</string>
     <string name="enable_sd_card">SD karte nav pieejama, lūdzu pieslēdz to</string>
     <string name="error_info_cant_send_folder">Nevaru nosūtīt mapi</string>
     <string name="fail_to_create_folder">Neizdevās izveidot mapi, jo tāda jau eksistē</string>
@@ -104,24 +104,24 @@
 Junk"</string>
     <string name="gbk_summary">Ja lieto GBK kodējumu, piemēram, Windows Explorer, tad izvēlies šo kodējumu, lai izvairītos no nepareizas heroglifu atainošanas</string>
     <string name="gbk_title">GBK</string>
-    <string name="give_up_cleaning">Cancel clean-up</string>
-    <string name="header_text_cleaned">Deleted junk</string>
-    <string name="header_text_cleaning">Cleaning junk left over</string>
-    <string name="header_text_scanned">Junk files found for deletion</string>
-    <string name="header_text_scanning">Scanning junk files…</string>
+    <string name="give_up_cleaning">Atcelt tīrīšanu</string>
+    <string name="header_text_cleaned">Dzēst nevēlamos</string>
+    <string name="header_text_cleaning">Tīra nevēlamās atliekas</string>
+    <string name="header_text_scanned">Atrasti nevēlamie faili dzēšanai</string>
+    <string name="header_text_scanning">Meklē nevēlamos failus…</string>
     <string name="instruction">Ievadi sekojošo adresi savā FTP Klientā:</string>
     <string name="instruction_pre">Palaist Servisu, lai sāknētu FTP serveri</string>
-    <string name="item_name">No name</string>
-    <string name="kuaipan_over_space">Oi! Tavā MiDrive vairs nav vietas.</string>
-    <string name="kuaipan_prompt">MiDrive Palīdzība</string>
+    <string name="item_name">Bez vārda</string>
+    <string name="kuaipan_over_space">Oi! Tavā MiDisks vairs nav vietas.</string>
+    <string name="kuaipan_prompt">MiDisks Palīdzība</string>
     <string name="kuaipan_prompt_message">"Serveris pašlaik nav pieejams, lūdzu mēģini vēlāk"</string>
     <string name="kuaipan_tech_support">Tehnisko atbalstu nodrošina Xiaomi</string>
     <string name="load_err">Ielādēšana neizdevās</string>
     <string name="loading">Ielādēju…</string>
     <string name="local_cache">Lokālais kešs</string>
     <string name="local_cache_size">Lokālā keša apjoms: %s</string>
-    <string name="login_reg_content">MiDrive palīdz glabāt un sinhronizēt tavas datnes starp dažādām ierīcēm.</string>
-    <string name="login_reg_content0">MiDrive ir tava datu krātuve Mākonī</string>
+    <string name="login_reg_content">MiDisks palīdz glabāt un sinhronizēt tavas datnes starp dažādām ierīcēm.</string>
+    <string name="login_reg_content0">MiDisks ir tava datu krātuve Mākonī</string>
     <string name="menu_item_cleanup">Datņu satīrīšana</string>
     <string name="menu_item_ftp">FTP</string>
     <string name="menu_item_search">Meklēt</string>
@@ -139,22 +139,22 @@ Junk"</string>
     <string name="networkView_notConnected">Nav savienojuma ar tīklu</string>
     <string name="new_folder_name">Jauna Mape</string>
     <string name="no">Nē</string>
-    <string name="no_app_cache_indication">No application cache</string>
-    <string name="no_app_garbage_indication">No application garbage</string>
-    <string name="no_empty_dir_indication">No empty directories</string>
+    <string name="no_app_cache_indication">Nav lietotņu kešatmiņa</string>
+    <string name="no_app_garbage_indication">Nav lietotņu gružu</string>
+    <string name="no_empty_dir_indication">Nav tukšas direktorijas</string>
     <string name="no_file">Nav datņu</string>
     <string name="no_more_space">Nav brīvas vietas</string>
     <string name="no_tasks">Nav uzdevumu</string>
-    <string name="no_temp_file_indication">No temporary files</string>
-    <string name="no_thumbnail_indication">No thumbnail files</string>
+    <string name="no_temp_file_indication">Nav pagaidu failu</string>
+    <string name="no_thumbnail_indication">Nav sīktēlu failu</string>
     <string name="no_wifi">Nav Wi-Fi tīkla</string>
     <string name="no_wifi_hint">Nav atrasts neviens Wi-Fi savienojums</string>
     <string name="notif_server_starting">Palaists FTP Serveris</string>
     <string name="notif_title">FTP Serveris</string>
-    <string name="open_changed_file_message">"The file you are trying to open has been modified, you could:
-1. Download (update the local file)
-2. Upload (update the remote file)"</string>
-    <string name="open_changed_file_title">File modified</string>
+    <string name="open_changed_file_message">"Failu ko vēlaties atvērt ir modificēts, jūs varat:
+1. Lejuplādēt (atjaunot vietējo failu)
+2. Augšuplādēt (atjaunot attālināto failu)"</string>
+    <string name="open_changed_file_title">Fails modificēts</string>
     <string name="operating">Apstrādāju…</string>
     <string name="operation_cancel">Atcelt</string>
     <string name="operation_compress">Saspiest</string>
@@ -189,23 +189,23 @@ Junk"</string>
     <string name="operation_send">Sūtīt</string>
     <string name="operation_show_sys">Rādīt slēptās datnes</string>
     <string name="operation_unfavorite">Novākt no Izlases</string>
-    <string name="pan_settting">MiDrive uzstādījumi</string>
+    <string name="pan_settting">MiDisks uzstādījumi</string>
     <string name="paused">Nopauzēts</string>
     <string name="query_bind_state">Pieprasu apkopojuma statusu, gaidi...</string>
     <string name="remote_management">FTP</string>
     <string name="rename_description">Pārsaucu, gaidi…</string>
     <string name="rename_failed">《%1$s》pārsaukšana neizdevās</string>
-    <string name="restart_cleaning">Restart</string>
+    <string name="restart_cleaning">Atsāknēt</string>
     <string name="scanning">Skenēju...</string>
-    <string name="scanning_on_going">Scanning...</string>
+    <string name="scanning_on_going">Skanēju...</string>
     <string name="sd_card_available">Pieejamais apjoms:%1$s</string>
     <string name="sd_card_size">SD karte:%1$s</string>
     <string name="sd_full">SD karte ir pilna!</string>
-    <string name="sd_size_label">SD card storage</string>
+    <string name="sd_size_label">SD kartes krātuve</string>
     <string name="search_hint">Meklēt datnes</string>
     <string name="search_title">Meklēt datnes</string>
-    <string name="send_to_midrive">Nosūtīt uz MiDrive</string>
-    <string name="send_to_midrive_failed_message">Neizdevās nosūtīt uz MiDrive. Neatbilstošs saturs</string>
+    <string name="send_to_midrive">Nosūtīt uz MiDisks</string>
+    <string name="send_to_midrive_failed_message">Neizdevās nosūtīt uz MiDisks. Neatbilstošs saturs</string>
     <string name="server_control_advanced_settings">Papildus uzstādījumi</string>
     <string name="server_control_charset">Kodējums pārsūtīšanai</string>
     <string name="server_control_settings">Servera uzstādījumi</string>
@@ -223,15 +223,15 @@ Junk"</string>
     <string name="storage_sd_card">SD karte</string>
     <string name="storage_usb">USB krātuve</string>
     <string name="storage_warning">Ārējā krātuve nav pieejama vai nav nolasāma</string>
-    <string name="sys_size">Total storage %1$s</string>
-    <string name="sys_size_title">Total storage</string>
+    <string name="sys_size">Koējā krātuve %1$s</string>
+    <string name="sys_size_title">Kopējā krātuve</string>
     <string name="tab_category">Pārlūkot</string>
-    <string name="tab_networkdisk">MiDrive</string>
+    <string name="tab_networkdisk">MiDisks</string>
     <string name="tab_phone">Tālrunis</string>
-    <string name="temp_file_cleanup_indication">%s temporary files</string>
-    <string name="temp_file_title">Temporary files</string>
-    <string name="thumbnail_cleanup_indication">%s thumbnails</string>
-    <string name="thumbnail_title">Thumbnail files</string>
+    <string name="temp_file_cleanup_indication">%s pagaidu faili</string>
+    <string name="temp_file_title">Pagaidu faili</string>
+    <string name="thumbnail_cleanup_indication">%s sīktēli</string>
+    <string name="thumbnail_title">Sīktēlu faili</string>
     <string name="toast_file_not_can_read">Datne ir nelasāma vai arī bojāta.</string>
     <string name="trans_task">Pārsūtīšana pa tīklu</string>
     <string name="trans_task_delete_confirm_message">Tiešām vēlies dzēst iezīmētos %1$d uzdevumus?</string>
@@ -243,7 +243,7 @@ Junk"</string>
     <string name="ui_bar_txt_download_progress">Lejuplādēju...</string>
     <string name="ui_bar_txt_upload_progress">Augšuplādēju...</string>
     <string name="ui_filechange_btn_download">Lejuplādētās datnes</string>
-    <string name="ui_filechange_btn_upload">Upload files</string>
+    <string name="ui_filechange_btn_upload">Augšuplādēt failus</string>
     <string name="ui_main_menu_option_task_manage">Pārsūtīšanas Pārvaldnieks</string>
     <string name="ui_main_progress_txt_open_file">Lejuplādēju...</string>
     <string name="ui_main_toast_favorite_removed">Izlase dzēsta!</string>
@@ -254,20 +254,20 @@ Junk"</string>
     <string name="uploading">Augšuplādēju...</string>
     <string name="used">Izmantots</string>
     <string name="user_guide">Lietotāja rokasgrāmata</string>
-    <string name="user_guide_download_other_version">"Lejuplādēt MiDrive PC vai Mac"</string>
-    <string name="user_guide_kuaipan_copy">"Lietot MiDrive, lai kopīgotu datnes starp dažādām ierīcēm"</string>
-    <string name="user_guide_other_version">Lejuplādēt citas MiDrive versijas</string>
-    <string name="user_guide_summary">Kā lietot MiDrive</string>
-    <string name="user_guide_upload_to_kuaipan">"Kopēt un ielīmēt datnes MiDrive"</string>
+    <string name="user_guide_download_other_version">"Lejuplādēt MiDisks PC vai Mac"</string>
+    <string name="user_guide_kuaipan_copy">"Lietot MiDisks, lai kopīgotu datnes starp dažādām ierīcēm"</string>
+    <string name="user_guide_other_version">Lejuplādēt citas MiDisks versijas</string>
+    <string name="user_guide_summary">Kā lietot MiDisks</string>
+    <string name="user_guide_upload_to_kuaipan">"Kopēt un ielīmēt datnes MiDisks"</string>
     <string name="utf8_summary">Pamata kodējums</string>
     <string name="utf8_title">UTF-8</string>
-    <string name="version_text">version %1$s</string>
+    <string name="version_text">versija %1$s</string>
     <string name="wait_net">Gaidu tīklu</string>
     <string name="wait_sdcard">Gaidu SD kartes pieslēgšanos</string>
     <string name="wait_wifi">Gaidu Wi-Fi savienojumu</string>
     <string name="waiting">Gaidu...</string>
-    <string name="waiting_for_cleaning">Waiting for cleaning</string>
-    <string name="waiting_for_scanning">Waiting for scanning</string>
+    <string name="waiting_for_cleaning">Gaida uz tīrīšanu</string>
+    <string name="waiting_for_scanning">Gaida uz skanēšanu</string>
     <string name="wangpan_root_path">My Drive</string>
     <string name="wifi_state">Wi-Fi Statuss</string>
     <string name="xiaomi_account">Xiaomi Konts</string>
