--- a/LV/main/Settings.apk/res/values-lv/strings.xml
+++ b/LV/main/Settings.apk/res/values-lv/strings.xml
@@ -14,7 +14,7 @@
     <string name="access_control_need_password">"%s ir aizsargāta 
 "</string>
     <string name="access_control_need_to_unlock">Nepieciešama parole</string>
-    <string name="access_control_no_back_footer">Press the [icon] to exit</string>
+    <string name="access_control_no_back_footer">Nospiediet [icon] , lai izietu</string>
     <string name="access_control_password_title">Iespējot paroli</string>
     <string name="access_control_recording_intro_header">Zīmēt shēmu, lai izveidotu paroli</string>
     <string name="access_control_reset_by_account">Login Xiaomi account to reset access control password</string>
@@ -97,7 +97,7 @@
     <string name="apn_mmsc">MMSC</string>
     <string name="apn_mnc">MNC</string>
     <string name="apn_name">Nosaukums</string>
-    <string name="apn_new">Jauns Access Point</string>
+    <string name="apn_new">Jauns Piekļuves punkts</string>
     <string name="apn_not_set">Nav iestatīts</string>
     <string name="apn_password">Parole</string>
     <string name="apn_protocol">APN protokols</string>
@@ -425,9 +425,9 @@ Type PIN to pair with \"%1$s\". [High Security Enabled: Needs 16 character key]"
     <string name="bluetooth_visibility">Atklājams</string>
     <string name="bluetooth_visibility_timeout">Redzamības noildze</string>
     <string name="bluetooth_visibility_timeout_summary">Iestatiet laiku, cik ilgi ierīce būs atklājama.</string>
-    <string name="breathing_light_color_summary">LED color when receiving new notification</string>
+    <string name="breathing_light_color_summary">LED krāsa kad saņem jaunu paziņojumu</string>
     <string name="breathing_light_color_title">" LED krāsa"</string>
-    <string name="breathing_light_freq_summary">Pulse LED on new notifications</string>
+    <string name="breathing_light_freq_summary">Pulsēt LED pie jaunu paziņojumu</string>
     <string name="breathing_light_freq_title">LED mirgošanas frekvence</string>
     <string name="brightness">Spilgtums</string>
     <string name="brightness_auto_adjust_off">Manual brightness can be adjusted to your liking by moving slider. Screen brightness will remain unchanged in any surrounding.</string>
@@ -669,7 +669,7 @@ Lai izvēlētos sinhronizējamās informācijas veidu katrā kontā, skatiet: Ie
     <string name="device_name_input_hint">Ievadiet ierīces nosaukumu</string>
     <string name="device_name_usage_point">Allow device to be discovered by other Bluetooth devices to allow file transfer and other functions.</string>
     <string name="device_picker">Bluetooth ierīces izvēle</string>
-    <string name="device_sd_memory">SD Card</string>
+    <string name="device_sd_memory">SD Karte</string>
     <string name="device_status">Statuss</string>
     <string name="device_status_activity_title">Statuss</string>
     <string name="device_status_summary">Tālruņa numurs, signāls u.c.</string>
@@ -1204,14 +1204,14 @@ please follow the steps to complete installation"</string>
     <string name="perm_header_disabled">Permission monitor is disabled</string>
     <string name="perm_hide_system_app">Hide System Apps</string>
     <string name="perm_hips">Manage App Permissions</string>
-    <string name="perm_hips_action_accept_count">Allowed: %1$d</string>
-    <string name="perm_hips_action_reject_count">Denied: %1$d</string>
-    <string name="perm_hips_adjust_ringer_volume">adjust ringer volume</string>
+    <string name="perm_hips_action_accept_count">Atļauts: %1$d</string>
+    <string name="perm_hips_action_reject_count">Liegts: %1$d</string>
+    <string name="perm_hips_adjust_ringer_volume">pielāgot zvana skaļumu</string>
     <string name="perm_hips_adjust_volume_incall">adjust volume in call</string>
-    <string name="perm_hips_allow_all">Allow all</string>
-    <string name="perm_hips_answer_call">answer current ringing call</string>
-    <string name="perm_hips_call_number">call %1$s</string>
-    <string name="perm_hips_calllog_access">read your call logs</string>
+    <string name="perm_hips_allow_all">Atļaut visu</string>
+    <string name="perm_hips_answer_call">atbildēt zvanu</string>
+    <string name="perm_hips_call_number">Zvans %1$s</string>
+    <string name="perm_hips_calllog_access">lasīt visus jūsu žurnālus</string>
     <string name="perm_hips_cancel_missed_calls">clear missed calls notification</string>
     <string name="perm_hips_contact_access">read your contact list</string>
     <string name="perm_hips_desc">Monitoring %1$d apps for security and privacy</string>
@@ -1219,7 +1219,7 @@ please follow the steps to complete installation"</string>
     <string name="perm_hips_desc2">Monitoring %1$d apps for security and privacy</string>
     <string name="perm_hips_disable_content">"Disabling it will make MIUI stop monitoring application requests and no longer protecting your security and privacy. Are you sure wish to disable it?"</string>
     <string name="perm_hips_disable_title">Permission Monitor</string>
-    <string name="perm_hips_end_call">hang up current call</string>
+    <string name="perm_hips_end_call">beigt šo savienojumu</string>
     <string name="perm_hips_get_call_state">get current call status</string>
     <string name="perm_hips_group_data_privacy">Privātums</string>
     <string name="perm_hips_group_expense">Drošība</string>
@@ -1379,7 +1379,7 @@ please follow the steps to complete installation"</string>
     <string name="pref_button_light">Button light</string>
     <string name="pref_button_light_summary">Menu, Home and Back key indicator</string>
     <string name="pref_operational_key">Operational key</string>
-    <string name="pref_volume_category_title">Volume</string>
+    <string name="pref_volume_category_title">Skaļums</string>
     <string name="pref_volume_wake_summary">Pressing the volume up/down wakes the device. Intended for devices with a hard to press power key.</string>
     <string name="pref_volume_wake_title">Volume rocker wake</string>
     <string name="preference_change_password_title">Mainīt paroli</string>
@@ -1585,21 +1585,21 @@ please follow the steps to complete installation"</string>
     <string name="search_access_control">Piekļuves kontrole</string>
     <string name="search_airplane">Lidojums</string>
     <string name="search_android_beam">beam</string>
-    <string name="search_battery_indicator">battery indicator</string>
+    <string name="search_battery_indicator">akumulaātora indikātors</string>
     <string name="search_bluetooth">bluetooth</string>
-    <string name="search_brightness">brightness</string>
+    <string name="search_brightness">spilgtums</string>
     <string name="search_date_time">date time</string>
     <string name="search_description">Meklēšanas iestatījumi</string>
     <string name="search_gps">gps</string>
     <string name="search_hint">Meklēšanas iestatījumi</string>
-    <string name="search_key">key</string>
+    <string name="search_key">taustiņš</string>
     <string name="search_label">Iestatījumi</string>
-    <string name="search_language">language</string>
-    <string name="search_launcher">launcher</string>
+    <string name="search_language">valoda</string>
+    <string name="search_launcher">palaidējs</string>
     <string name="search_led">led</string>
-    <string name="search_network">network</string>
+    <string name="search_network">tīkls</string>
     <string name="search_power_mode">power mode</string>
-    <string name="search_ring_volume">ring volume</string>
+    <string name="search_ring_volume">zvana skaļums</string>
     <string name="search_ringtone">ringtone</string>
     <string name="search_screen_timeout">screen timeout</string>
     <string name="search_settings">Meklēt</string>
@@ -1711,10 +1711,10 @@ Attempts Remaining :"</string>
     <string name="sim_reenter_new">Atkārtoti ievadiet jauno PIN.</string>
     <string name="skip_button_label">Atcelt</string>
     <string name="skip_label">Izl.</string>
-    <string name="skip_step">Skip this step</string>
+    <string name="skip_step">Izlaist šo soli</string>
     <string name="small_font">Mazs</string>
     <string name="sms_delivered_sound_dialog_title">Choose SMS delivered sound</string>
-    <string name="sms_delivered_sound_title">SMS delivered sound</string>
+    <string name="sms_delivered_sound_title">SMS piegādes skaņa</string>
     <string name="sms_over_ims_off">Izslēgt īsziņas prioritāti pār IM ziņojumu</string>
     <string name="sms_over_ims_on">Ieslēgt īsziņas prioritāti pār IM ziņojumu</string>
     <string name="sms_received_sound_dialog_title">Izvēlies skaņu, kad saņem SMS</string>
@@ -2017,8 +2017,8 @@ Attempts Remaining :"</string>
     <string name="virus_scanner_provider">Security support provided by %s</string>
     <string name="virus_scanner_scan">Scan Now</string>
     <string name="virus_scanner_scanning">Protecting software</string>
-    <string name="virus_scanner_select_Cancel">Cancel</string>
-    <string name="virus_scanner_select_OK">OK</string>
+    <string name="virus_scanner_select_Cancel">Atcelt</string>
+    <string name="virus_scanner_select_OK">Labi</string>
     <string name="virus_scanner_select_lib">Select virus database</string>
     <string name="virus_scanner_select_multi">Selecting more than one virus database will slow down installation and scanning.</string>
     <string name="virus_scanner_select_single">It is recommended to choose your most trusted virus database</string>
